--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -19,3 +19,13 @@ body {
   background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
 }
+
+/* Custom styles for slick-carousel dots */
+.slick-dots li button:before {
+  color: #4b5563; /* gray-600 */
+  font-size: 10px;
+}
+
+.slick-dots li.slick-active button:before {
+  color: #ffffff; /* White */
+}
